--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -5,10 +5,10 @@
     android:id="@+id/bottom_sheet_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f6f6fa"
-    app:behavior_hideable="true"
-    app:behavior_peekHeight="50dp"
-    android:visibility="gone"
+    android:background="@color/light_gray"
+    app:behavior_hideable="false"
+    app:behavior_peekHeight="100dp"
+    android:visibility="visible"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <View
@@ -25,12 +25,13 @@
         android:id="@+id/bottomSheetDescriptionHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="30dp"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="#000"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bottomSheetLine"
         tools:text="Two Clusters and a Comet" />
