lesson2. Добавлены 2 темы

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,19 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_gray">#7C7C7C</color>
     <color name="light_gray">#E9E9E9</color>
+    
+    <!-- Colors for Mars Theme-->
+    <color name="mars_red">#DD2C00</color>
+    <color name="mars_red_light">#FF6D00</color>
+    <color name="mars_red_dark">#D50000</color>
+    <color name="mars_red_very_light">#C36969</color>
+    <color name="mars_theme_primary">#EF9A9A</color>
+    
+    <!-- Colors for Venus Theme-->
+    <color name="venus_blue">#304FFE</color>
+    <color name="venus_blue_light">#0091EA</color>
+    <color name="venus_blue_dark">#00437A</color>
+    <color name="venus_blue_very_light">#B2EBF2</color>
+    <color name="venus_theme_primary">#00B8D4</color>
 
 </resources>
