--- a/app/src/main/res/layout/bottom_settings_layout.xml
+++ b/app/src/main/res/layout/bottom_settings_layout.xml
@@ -7,19 +7,22 @@
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/chipGroup"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/switchNightMode"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="spread_inside"
         app:singleSelection="true">
 
         <com.google.android.material.chip.Chip
             android:id="@+id/default_theme_chip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checkable="true"
             android:layout_marginEnd="@dimen/margin_default_chip_settings"
+            android:checkable="true"
             android:text="@string/default_text_chip_theme_settings" />
 
         <com.google.android.material.chip.Chip
@@ -40,5 +43,14 @@
             app:chipIcon="@drawable/ic_venus"
             app:iconStartPadding="@dimen/icon_start_padding_chip_settings" />
     </com.google.android.material.chip.ChipGroup>
+
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/switchNightMode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/night_mode_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/chipGroup"
+        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
