--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -7,10 +7,34 @@
         <item name="colorOnPrimary">@color/black</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="themeColorPrimary">@color/teal_200</item>
+        <item name="colorBottomSheet">@color/color_gray</item>
+    </style>
+
+    <style name="VenusTheme" parent="Theme.PictureOfTheDay">
+        <item name="colorPrimary">@color/venus_blue</item>
+        <item name="colorPrimaryVariant">@color/venus_blue_light</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/venus_blue_dark</item>
+        <item name="colorSecondaryVariant">@color/venus_blue_very_light</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="themeColorPrimary">@color/venus_theme_primary</item>
+        <item name="colorBottomSheet">@color/venus_blue_very_dark</item>
+    </style>
+
+    <style name="MarsTheme" parent="Theme.PictureOfTheDay">
+        <item name="colorPrimary">@color/mars_red</item>
+        <item name="colorPrimaryVariant">@color/mars_red_light</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/mars_red_dark</item>
+        <item name="colorSecondaryVariant">@color/mars_red_very_light</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="themeColorPrimary">@color/mars_theme_primary</item>
+        <item name="colorBottomSheet">@color/mars_red_very_dark</item>
     </style>
 </resources>
