--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="themeColorPrimary" format="reference"/>
+    <attr name="colorBottomSheet" format="reference"/>
+
+
 </resources>
