--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,8 +12,11 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
         <item name="themeColorPrimary">@color/teal_200</item>
         <item name="colorBottomSheet">@color/color_gray</item>
+
+        <item name="chipStyle">@style/AppChip</item>
     </style>
 
     <style name="VenusTheme" parent="Theme.PictureOfTheDay">
