--- a/app/src/main/res/layout/fragment_wiki.xml
+++ b/app/src/main/res/layout/fragment_wiki.xml
@@ -10,6 +10,9 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginEnd="@dimen/margin_medium"
+        android:layout_marginTop="@dimen/margin_medium"
         android:hint="@string/search_wiki"
         app:counterEnabled="true"
         app:counterMaxLength="30"
