--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="icon_start_padding_chip_settings">4dp</dimen>
-    <dimen name="margin_default_chip_settings">16dp</dimen>
+    <dimen name="margin_medium">16dp</dimen>
 </resources>
