--- a/app/src/main/res/layout/fragment_picture_of_the_day.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/pod_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.example.pictureoftheday.utils.EquilateralImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_behavior=".view.pod.PODBehavior"
         android:contentDescription="@string/photo_of_the_day_stub"
         app:srcCompat="@drawable/ic_no_photo_vector" />
