--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -4,14 +4,18 @@
         <item
             android:id="@+id/navigation_pod"
             android:icon="@drawable/ic_pod"
-            android:title="Картина дня" />
+            android:title="@string/pod_text_menu" />
         <item
             android:id="@+id/navigation_wiki"
             android:icon="@drawable/ic_wiki_menu"
-            android:title="Википедия" />
+            android:title="@string/wiki_text_menu" />
+        <item
+            android:id="@+id/navigation_solar_system"
+            android:icon="@drawable/ic_galaxy_menu"
+            android:title="@string/solar_system_text_menu" />
         <item
             android:id="@+id/navigation_settings"
             android:icon="@drawable/ic_settings_menu"
-            android:title="Настройки" />
+            android:title="@string/settings_text_menu" />
     </group>
 </menu>
